--- a/TODO
+++ b/TODO
@@ -1,11 +1,7 @@
 [PROBES]
-[done june 27. 21:43] use a configuration file for the probes
 use a unique hash tag to mark the query sent and answer received
 improve authorization of an experimenter.
 
-[done july 1. 13:00] MonetDB connection returns 'Unknown state,...' utf-8 codec error returned USE DB LOCK
-
-[done july 1, 22:00] Move sqlprobes to its own repository
 implement Action probe
 implement Firebird probe
 implement Mariadb probe
@@ -19,3 +15,9 @@ extend the use cases with VOC
 
 gather system parameters, e.g. system load before start of experiment
 extend return vector with row-cnt and/or result-set hash
+
+[done june 27. 21:43] use a configuration file for the probes
+[done july 1. 13:00] MonetDB connection returns 'Unknown state,...' utf-8 codec error returned USE DB LOCK
+[done july 2, 22:00] Move sqlprobes to its own repository
+
+[done, july 4 20:30]  handle the '*' properly in queue.getwork for project/experiment
