--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
-[PROBES]
+[NEED TO HAVE]
+protect against fake results by validation of the experimenter as registered user
 use a unique hash tag to mark the query sent and answer received
 improve authorization of an experimenter.
+return a version id and/or details for the driver being used.
 
-implement Action probe
-implement Firebird probe
 implement Mariadb probe
+implement Firebird probe
 implement Mongodb probe
 implement Hive probe
 implement Spark/SQL probe
@@ -12,10 +13,13 @@ implement JDBC generic probe
 
 extend the use cases with airtraffic
 extend the use cases with VOC
+extend the use cases with TableauCatalog tests
 
-gather system parameters, e.g. system load before start of experiment
+[NICE TO HAVE]
+gather additional system parameters, e.g. system load before start of experiment
 extend return vector with row-cnt and/or result-set hash
-implement output channel for offline processing
+
+implement input/output channel for offline bulk processing
 
 [done june 27. 21:43] use a configuration file for the probes
 [done july 1. 13:00] MonetDB connection returns 'Unknown state,...' utf-8 codec error returned USE DB LOCK
@@ -23,3 +27,4 @@ implement output channel for offline processing
 
 [done, july 4 20:30] handle the '*' properly in queue.getwork for project/experiment
 [done, july 5 22:00] added error bail out and first part of offline processing
+[done, july 13 10:00] implement Action probe
