--- a/TODO
+++ b/TODO
@@ -4,8 +4,7 @@ use a unique hash tag to mark the query sent and answer received
 improve authorization of an experimenter.
 return a version id and/or details for the driver being used.
 
-implement Mariadb probe
-implement Firebird probe
+
 implement Mongodb probe
 implement Hive probe
 implement Spark/SQL probe
@@ -18,13 +17,15 @@ extend the use cases with TableauCatalog tests
 [NICE TO HAVE]
 gather additional system parameters, e.g. system load before start of experiment
 extend return vector with row-cnt and/or result-set hash
+implement offline bulk processing
 
-implement input/output channel for offline bulk processing
+[DONE]
+[june 27. 21:43] use a configuration file for the probes
+[july 1. 13:00] MonetDB connection returns 'Unknown state,...' utf-8 codec error returned USE DB LOCK
+[july 2, 22:00] Move sqlprobes to its own repository
 
-[done june 27. 21:43] use a configuration file for the probes
-[done july 1. 13:00] MonetDB connection returns 'Unknown state,...' utf-8 codec error returned USE DB LOCK
-[done july 2, 22:00] Move sqlprobes to its own repository
-
-[done, july 4 20:30] handle the '*' properly in queue.getwork for project/experiment
-[done, july 5 22:00] added error bail out and first part of offline processing
-[done, july 13 10:00] implement Action probe
+[july 4 20:30] handle the '*' properly in queue.getwork for project/experiment
+[july 5 22:00] added error bail out and first part of offline processing
+[july 13 10:00] implement Action probe
+[july 17 12:00]implement Mariadb probe
+[july 17 21:00]implement Firebird probe
